--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,27 @@
+name: Download File Workflow
+
 on:
   push:
-    paths-ignore:
-      - 'files.json'
+    paths:
+      - 'file.txt'  # Trigger this workflow when your file is updated.
+
 jobs:
-  build:
+  download-file:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Run github-to-json
-        run: |
-          npm install --global github-to-json
-          github-to-json Biodepot-LLC workflows -t ${{ secrets.WORKFLOWS_ACTIONS_PRIVATE_KEY }} -o files.json
-      - name: Commit changes
-        run: |
-          git config --global user.name "Thomas Dahlstrom"
-          git config --global user.email "tdahlstrom@users.noreply.github.com"
-          git add files.json
-          git commit -m "Update files.json"
-          git push
+    - name: Set up SSH
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.WORKFLOWS_ACTIONS_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        ssh-keyscan github.com >> ~/.ssh/known_hosts
+
+    - name: Checkout repository
+      uses: actions/checkout@v2
+      with:
+        ssh-key: ${{ secrets.WORKFLOWS_ACTIONS_PRIVATE_KEY }}
+
+    - name: Download file
+      run: |
+        # Your commands to download or process the file.
+        cat file.txt
