--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Convert to JSON
         run: |
-          git ls-tree -r --name-only HEAD > files.txt
-      - name: Commit and Push JSON
+          git ls-tree -rt > files.txt
+      - name: Commit and push file list
         run: |
           git config --global user.email "action@github.com"
           git config --global user.name "GitHub Action"
